# cloudreve-api

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: client.rs  cloudreve_api.rs  error.rs  lib.rs
src/api/: mod.rs
src/api/v3/: aria2.rs  directory.rs  file.rs  mod.rs  models.rs  object.rs  session.rs  share.rs  site.rs  user.rs
src/api/v4/: dav.rs  file.rs  mod.rs  models.rs  session.rs  share.rs  site.rs  uri.rs  user.rs  workflow.rs
src/api/v4/models/: auth.rs  common.rs  dav.rs  file.rs  mod.rs  request.rs  response.rs  share.rs  site.rs  storage.rs  task.rs  user.rs
src/cloudreve_api/: auth.rs  dav.rs  download.rs  file.rs  mod.rs  share.rs  site.rs  user.rs
tests/: api_integration_test.rs  client_test.rs  edge_cases_test.rs  error_handling_test.rs  file_test.rs  integration_test.rs  mock_client_test.rs  session_test.rs  share_test.rs  user_test.rs  v3_file_test.rs  v3_integration_test.rs  v3_models_test.rs  v3_object_test.rs  v3_session_test.rs  workflow_test.rs
tests/config/: test_config.example.toml
tests/integration/: common.rs  mod.rs  v3_tests.rs  v4_tests.rs
tests/validation/: mod.rs  openapi_validator.rs
