[package]
name = "cloudreve-api"
version = "0.4.2"
edition.workspace = true
description = "A Rust library for interacting with Cloudreve API"
license.workspace = true
authors.workspace = true
repository = "https://github.com/larriti/cloudreve-api"
keywords = ["cloudreve", "api", "storage", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
log = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
toml = "0.8"

[lib]
name = "cloudreve_api"
path = "src/lib.rs"
